# PCA-cuda

./: CMakeLists.txt  PCA_cpu.cpp  PCA_cpu.h  README.md
Src/: CMakeLists.txt  PCA.cu  PCA.h  PCA_cpu.cpp  PCA_cpu.h  test_matrix.txt  train_matrix.txt
